MTP: Handle overwriting of files in do_push correctly.

If a file copy is requested without OVERWRITE but the destination
exists, return G_IO_ERROR_EXISTS. If OVERWRITE is requested, then
delete the destination before the push.

https://bugzilla.gnome.org/show_bug.cgi?id=696163